syntax = "proto2";

package ostorlab.runtimes.proto;


message Arg {
  // Defines the arguments passed to the agent. All arg values are serialized to raw bytes and define a type that the
  // must know how to handle.
  required string name = 1;
  required string type = 2;
  required bytes  value = 3;
}

message PortMapping {
  // Defines container port mapping. All ports are mapping on 0.0.0.0.
  required sint32 source_port = 1;
  required sint32 destination_port = 2;
}


message AgentInstanceSettings {
  // Proto definition of agent instance settings. This is use to serialize all the settings passed from the runtime to
  // the agent.
  required string key = 1;
  required string bus_url = 2;
  required string bus_exchange_topic = 3;
  repeated Arg args = 4;
  repeated string constraints = 5;
  repeated string mounts = 6;
  required string restart_policy = 7;
  optional sint64 mem_limit = 8;
  repeated PortMapping open_ports = 9;
  required sint32 replicas = 10;
  required string healthcheck_host = 11;
  required sint32 healthcheck_port = 12;
}